--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.testbook.githubpr">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
             android:name=".GithubApplication"
             android:allowBackup="true"
